[tool.poetry]
name = "syntaxparser"
version = "0.0.1"
description = "syntax highlight based on EBNF"
authors = ["luzhixing12345 <luzhixing12345@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luzhixing12345/syntaxparser"
documentation = "https://luzhixing12345.github.io/syntaxparser/"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
