[tool.poetry]
name = "syntaxlight"
version = "0.1.42"
description = "syntax highlight based on EBNF"
authors = ["luzhixing12345 <luzhixing12345@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/luzhixing12345/syntaxlight"
documentation = "https://luzhixing12345.github.io/syntaxlight/"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
